--- a/tasks/test.yml
+++ b/tasks/test.yml
@@ -1,5 +1,10 @@
 - shell: cat /var/log/firstboot.log
   register: firstboot
+  retries: 15
+  delay: 60
+
 - debug: var=firstboot.stdout
+
 - shell: ps ax|grep -i beam
+
 - shell: service riak ping
