Added image searching/ubuntu support/key generation

--- a/01_make_image.yml
+++ b/01_make_image.yml
@@ -1,12 +1,23 @@
+- hosts: localhost
+  connection: local
+  tasks: 
+  - include: tasks/get_jq.yml
+
 - hosts: images
   gather_facts: false
   vars:
     nodename: "{{ inventory_hostname }}"
-    nodeimage: "{{ image }}"
+    dnsname: "{{ inventory_hostname }}"
+#    nodeimage: "{{ image }}"
     ansible_ssh_user: "{{ user }}"
     ansible_sudo_pass: "{{ pass }}"
     ansible_ssh_private_key_file: "{{ key }}"
   tasks:
+  - local_action: shell azure vm image list --json | ./bin/jq '[.[] | select(.Label == "{{ image_label }}")] | sort_by("PiblishedDate")[-1:] | .[].Name' -r
+    register: image_res
+  - set_fact:
+      image: "{{ image_res.stdout }}"
+      nodeimage: "{{ image_res.stdout }}"
   - include: tasks/create.yml
   - include: tasks/wait.yml
   - include: tasks/load.yml
