--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -1,53 +1,3 @@
-- yum: "name=http://yum.basho.com/gpg/basho-release-6-1.noarch.rpm state=installed"
-- yum: name=riak state=installed
-
-- lineinfile: dest=/etc/sudoers regexp='^Defaults:root' line='Defaults:root !requiretty'
-
-- command: iptables -nL
-  register: iptables
-
-- command: iptables -A INPUT -p tcp -m state --state NEW -m tcp --dport {{ item }} -j ACCEPT
-  with_items:
-  - "8098"
-  - "6000:7999"
-  - "4369"
-  - "8099"
-  - "8087"
-  when: iptables.stdout.find(item) == -1
-
-- command: service iptables save
-- copy: src=limits.conf dest=/etc/security/limits.d/90-nofile-riak.conf
-- copy: src=riak-app.config dest=/etc/riak/app.config
-- copy: src=riak-vm.args dest=/etc/riak/vm.args
-- copy: src=firstboot dest=/usr/sbin/firstboot mode=0755
-- copy: src=waagent.conf dest=/etc/waagent.conf
-
-- command: df -T /var/lib/riak
-  register: df
-
-- mount: "name={{ df.stdout_lines[-1].split(' ')[5] }} src={{ df.stdout_lines[-1].split(' ')[1] }} fstype={{ df.stdout_lines[-1].split(' ')[2] }} opts=noatime state=present"
-
-- lineinfile: dest=/etc/rc.d/rc.local regexp='^echo deadline' line='echo deadline > /sys/block/sda/queue/scheduler'
-- lineinfile: dest=/etc/rc.d/rc.local regexp='^echo 1024' line='echo 1024 > /sys/block/sda/queue/nr_requests'
-
-- sysctl: name="{{ item }}" state=absent reload=no
-  with_items:
-  - net.bridge.bridge-nf-call-ip6tables
-  - net.bridge.bridge-nf-call-iptables
-  - net.bridge.bridge-nf-call-arptables
-
-- sysctl: name="{{ item.name }}" value="{{ item.value }}" sysctl_set=yes state=present reload=yes
-  with_items:
-  - { name: vm.dirty_bytes, value: 209715200 }
-  - { name: vm.dirty_background_bytes, value: 104857600 }
-  - { name: vm.dirty_writeback_centisecs, value: 200 }
-  - { name: vm.dirty_expire_centisecs, value: 200 }
-  - { name: net.ipv4.tcp_max_syn_backlog, value: 40000 }
-  - { name: net.core.somaxconn, value: 40000 }
-  - { name: net.ipv4.tcp_sack, value: 1 }
-  - { name: net.ipv4.tcp_window_scaling, value: 1 }
-  - { name: net.ipv4.tcp_fin_timeout, value: 15 }
-  - { name: net.ipv4.tcp_keepalive_intvl, value: 30 }
-  - { name: net.ipv4.tcp_tw_reuse, value: 1 }
-  - { name: net.ipv4.tcp_moderate_rcvbuf, value: 1 }
-  - { name: vm.swappiness, value: 0 }
+- { include: centos_setup.yml, when: ansible_os_family == "RedHat" }
+- { include: ubuntu_setup.yml, when: ansible_os_family == "Debian" }
+- { include: common_setup.yml }
