--- a/tasks/wait.yml
+++ b/tasks/wait.yml
@@ -1,4 +1,4 @@
-- local_action: shell azure vm show {{ nodename }} --json | jq -r '.InstanceStatus'
+- local_action: shell azure vm show {{ nodename }} --json | ./bin/jq -r '.InstanceStatus'
   register: vm_show
   until: vm_show.stdout == "ReadyRole" or vm_show.stdout == "Failed"
   failed_when: vm_show.stdout == "Failed"
