--- a/01_make_image.yml
+++ b/01_make_image.yml
@@ -8,7 +8,6 @@
   vars:
     nodename: "{{ inventory_hostname }}"
     dnsname: "{{ inventory_hostname }}"
-#    nodeimage: "{{ image }}"
     ansible_ssh_user: "{{ user }}"
     ansible_sudo_pass: "{{ pass }}"
     ansible_ssh_private_key_file: "{{ key }}"
@@ -21,5 +20,5 @@
   - include: tasks/create.yml
   - include: tasks/wait.yml
   - include: tasks/load.yml
-  - { include: tasks/setup.yml, sudo: true }
-  - include: tasks/capture.yml
+  #- { include: tasks/setup.yml, sudo: true }
+  #- include: tasks/capture.yml
