--- a/tasks/create.yml
+++ b/tasks/create.yml
@@ -1,5 +1,17 @@
+- local_action: command azure service show {{ dnsname }}
+  ignore_errors: true
+  register: service_show
+
+- local_action: command azure service create {{ dnsname }} --location "{{ location }}"
+  when: service_show.rc != 0 and service_show.stderr.find("The hosted service does not exist.") != -1
+
+- local_action: command azure vm show -d {{ dnsname }} {{ nodename }}
+  ignore_errors: true
+  register: vm_show
+
 - local_action: command azure vm create --location "{{ location }}" --ssh "{{ ansible_ssh_port | d(22) }}" --ssh-cert {{ key }} -n {{ nodename }} -c {{ dnsname }} {{ nodeimage }} {{ user }} {{ pass }}
   register: vm_create
   until: vm_create.rc == 0
   retries: 3
   delay: 5
+  when: vm_show.rc == 1 and vm_show.stderr.find("No VMs found") != -1
