--- a/tasks/create.yml
+++ b/tasks/create.yml
@@ -9,7 +9,7 @@
   ignore_errors: true
   register: vm_show
 
-- local_action: command azure vm create --location "{{ location }}" --ssh "{{ ansible_ssh_port | d(22) }}" --ssh-cert {{ key }} -n {{ nodename }} -c {{ dnsname }} {{ nodeimage }} {{ user }} {{ pass }}
+- local_action: command azure vm create --ssh "{{ ansible_ssh_port | d(22) }}" --ssh-cert {{ key }} -n {{ nodename }} -c {{ dnsname }} {{ nodeimage }} {{ user }} {{ pass }}
   register: vm_create
   until: vm_create.rc == 0
   retries: 3
