--- a/01_make_image.yml
+++ b/01_make_image.yml
@@ -9,7 +9,7 @@
     nodename: "{{ inventory_hostname }}"
     dnsname: "{{ inventory_hostname }}"
     ansible_ssh_user: "{{ user }}"
-    ansible_sudo_pass: "{{ pass }}"
+    #ansible_sudo_pass: "{{ pass }}"
     ansible_ssh_private_key_file: "{{ key }}"
   tasks:
   - local_action: shell azure vm image list --json | ./bin/jq '[.[] | select(.Label == "{{ image_label }}")] | sort_by("PiblishedDate")[-1:] | .[].Name' -r
