--- a/01_make_image.yml
+++ b/01_make_image.yml
@@ -21,5 +21,5 @@
   - include: tasks/wait.yml
   - include: tasks/load.yml
   - { include: tasks/setup.yml, sudo: true }
-  - include: tasks/capture.yml
-  - include: tasks/remove_service.yml
+  - { include: tasks/capture.yml }
+  - { include: tasks/remove_service.yml }
