Updated to work with azure cli changes, riak 2.0

--- a/00_get_reqs.yml
+++ b/00_get_reqs.yml
@@ -1,5 +1,5 @@
 - hosts: localhost
   connection: local
   tasks: 
-  - include: tasks/get_jq.yml
+  - include: tasks/check_reqs.yml
   - include: tasks/make_key.yml
