--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
 hostfile = ./inventory/hosts
+remote_tmp = /tmp
 
 [ssh_connection]
 
 ssh_args = -o BatchMode=yes -o StrictHostKeyChecking=no
+# Changing remote_tmp so ansible doesn't fail after deprovisioning
