--- a/tasks/wait.yml
+++ b/tasks/wait.yml
@@ -1,4 +1,4 @@
-- local_action: shell azure vm show {{ nodename }} --json | ./bin/jq -r '.InstanceStatus'
+- local_action: shell azure vm show {{ nodename }} --json | jq -r '.instanceStatus'
   register: wait_vm_show
   until: wait_vm_show.stdout == "ReadyRole" or wait_vm_show.stdout == "Failed"
   failed_when: wait_vm_show.stdout == "ProvisioningFailed" or wait_vm_show.rc != 0
