--- a/tasks/common_setup.yml
+++ b/tasks/common_setup.yml
@@ -1,10 +1,11 @@
 - lineinfile: dest=/etc/sudoers regexp='^Defaults:root' line='Defaults:root !requiretty'
 
 - copy: src=limits.conf dest=/etc/security/limits.d/90-nofile-riak.conf owner=root group=root
-- copy: src=riak-app.config dest=/etc/riak/app.config owner=root group=root
-- copy: src=riak-vm.args dest=/etc/riak/vm.args owner=root group=root
+#- copy: src=riak-app.config dest=/etc/riak/app.config owner=root group=root
+#- copy: src=riak-vm.args dest=/etc/riak/vm.args owner=root group=root
+- copy: src=riak-riak.conf dest=/etc/riak/riak.conf owner=riak group=riak
 - copy: src=firstboot dest=/usr/sbin/firstboot mode=0755 owner=root group=root
-#- copy: src=waagent.conf dest=/etc/waagent.conf owner=root group=root
+- copy: src=waagent.conf dest=/etc/waagent.conf owner=root group=root
 
 - command: df -T /var/lib/riak
   register: df
